# Animagine-UI

./: README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/animagine_ui/: main.py  server.py
backend/src/animagine_ui/api/: app.py  schema.graphql
backend/src/animagine_ui/api/Mutation/: __init__.py
backend/src/animagine_ui/api/Mutation/generateImage/: __init__.py  controller.py  type.py
backend/src/animagine_ui/api/Query/: __init__.py  hello.py
backend/src/animagine_ui/api/Subscription/: __init__.py
backend/src/animagine_ui/api/Subscription/generateImage/: __init__.py  controller.py  type.py
frontend/: codegen.ts  package.json  pnpm-lock.yaml  schema.graphql  vite.config.ts
frontend/app/routes/: index.tsx
frontend/codegen-plugins/: subscription-iterator.ts
frontend/src/: App.css  App.tsx  route.ts  route.tsx
frontend/src/components/container/: index.ts
frontend/src/components/container/Col/: Col.styles.ts  Col.tsx
frontend/src/components/container/Row/: Row.styles.ts  Row.tsx
frontend/src/components/style/: common.ts  index.ts  neumorphism.ts
frontend/src/graphql/: core.ts  generated.ts  utils.ts
frontend/src/graphql/queries/: GenerateImage.graphql
frontend/src/routes/: __root.tsx
frontend/src/routes/(app)/: $id.tsx  index.tsx
frontend/src/utils/: index.ts  router.ts  type.utils.ts
src/animagine/: main.py
