[project]
name = "animagine"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KoheiOkamoto", email = "ohayousagi.ac.kook0727@gmail.com"},
]
dependencies = ["torch>=2.5.1", "diffusers>=0.32.1", "transformers>=4.48.0", "accelerate>=1.2.1", "safetensors>=0.5.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
